vista chat implementada, back y front

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate": "ts-node src/migrate.ts"
   },
   "keywords": [],
   "author": "",
